@@ -1,6 +1,8 @@
 Revision history for perl distribution Convos
 
 6.42 Not Released
+ - Fix resetting reconnect delay when manually updating connection settings
+ - Fix not changing wanted state to "disconnected" when updating connection settings
  - Fix double line breaks inside <pre> in the CMS by changing to Text::Markdown::Hoedown
  - Fix not adding space between channel name links
  - Avoid making #123 turn into channel links, since they are often pull request numbers
